# wx

./: .gitignore  CMakeLists.txt  README.md
data/hud/: GLTFViewer.xml  PlanetTest.xml
data/model/: Axis.blend  Axis.glb  Plane.blend  Plane.glb  Scene.blend  Scene.blend1  Scene.gltf  Snake.gltf  Sphere.blend  Sphere.gltf
data/script/: enemy.controller.lua  entities.lua  player.controller.lua
data/shader/: base.frag  base.vert  depth.frag  depth.vert  depth_cube.vert  font.frag  font.vert  hud.frag  hud.vert  hud_debug_depth.frag  pbr.frag  pbr.vert  skybox.frag  skybox.vert  skybox_map.frag  skybox_map.geom  skybox_map.vert  skydome.frag  skydome.vert  terrain.frag  terrain.vert
engine/: CMakeLists.txt
engine/include/: assets.h  cgltf.h  components.h  demo.h  ecs.h  engine.h  font.h  input.h  log.h  lua_engine.hpp  menu_loader.h  nuklear_glfw_gl3.h  perf.h  renderer.h  systems.h  tiny_gltf.h  window.h
engine/src/: animator.cpp  app.cpp  assets.cpp  demo.c  ecs.cpp  engine.cpp  font.cpp  graph.cpp  hud.c  input.cpp  log.cpp  lua_engine.cpp  model.cpp  nuklear_ui.cpp  perf.c  renderer.cpp  script.cpp  window.cpp
game/: CMakeLists.txt  DummyGame.cpp  DummyGame.h  GLTFViewer.cpp  GLTFViewer.h  PlanetTest.cpp  PlanetTest.h  main.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
noise/: CMakeLists.txt
