aux_source_directory(src ENGINE_SRC)
add_library(engine ${ENGINE_SRC})
include_directories(include)
include_directories(${PROJECT_SOURCE_DIR}/glad/include)
include_directories(${PROJECT_SOURCE_DIR}/noise/include)
target_link_libraries(engine PRIVATE spdlog::spdlog glad glfw3 opengl32 freetype fmt noise)