aux_source_directory(src ENGINE_SRC)
add_library(engine ${ENGINE_SRC} include/menu_loader.h)
add_executable(hud src/hud.c src/demo.c src/perf.c)
include_directories(include)
include_directories(${PROJECT_SOURCE_DIR}/glad/include)
include_directories(${PROJECT_SOURCE_DIR}/noise/include)
include_directories(${PROJECT_SOURCE_DIR}/spdlog-1.x/include)
target_link_libraries(engine glad glfw3 opengl32 freetype noise nanovg tinyxml2 pthread lua spdlog::spdlog)
target_link_libraries(hud PRIVATE glad glfw3 opengl32 freetype nanovg)

file(COPY ../data/example DESTINATION ${PROJECT_BINARY_DIR}/engine)